add project scripts

--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "rickmortyapi",
   "version": "1.0.0",
-  "description": "",
+  "description": "A project for Rick and Morty search",
   "main": "index.js",
   "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "type-check": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Andrew Indeche",
+  "license": "ISC",
+  "dependencies": {
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
