--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Andrew Indeche",
   "license": "ISC",
   "dependencies": {
+    "mkdirp": "^3.0.1",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
