--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "author": "Andrew Indeche",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.7",
     "mkdirp": "^3.0.1",
     "next": "^14.1.0",
