--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "axios": "^1.6.7",
     "mkdirp": "^3.0.1",
     "mysql2": "^3.9.1",
