--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "mkdirp": "^3.0.1",
     "mysql2": "^3.9.1",
     "next": "^14.1.0",
