add react version to config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,11 @@
         "@typescript-eslint",
         "react"
     ],
+  "settings": {
+    "react": {
+      "version": "18.2.0" 
+    }
+  },
     "rules": {
     }
 }
