--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "eslint": "^8.56.0",
+    "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-react": "^7.33.2",
     "typescript": "^5.3.3"
   }
