add esling next configs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,32 +1,31 @@
 {
     "env": {
-        "browser": true,
-        "es2021": true,
-        "node": true
+      "browser": true,
+      "es2021": true,
+      "node": true
     },
     "extends": [
-        "next",
-        "next/core-web-vitals",
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:react/recommended"
+      "next",
+      "next/core-web-vitals",
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:react/recommended"
     ],
-    
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+      "ecmaVersion": "latest",
+      "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint",
-        "react",
-        "jsx-a11y"
+      "@typescript-eslint",
+      "react",
+      "jsx-a11y"
     ],
-  "settings": {
-    "react": {
-      "version": "18.2.0" 
-    }
-  },
-    "rules": {
-    }
-}
+    "settings": {
+      "react": {
+        "version": "18.2.0"
+      }
+    },
+    "rules": {}
+  }
+  
